federated-computation/dashboard/keycloak-ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: dashboard-keycloak
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/enable-cors: 'true'
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:
    - host: fedcomp.eucaim.cancerimage.eu
      http:
        paths:
          - path: /auth/
            pathType: Prefix
            backend:
              service:
                name: dashboard-keycloak
                port:
                  number: 8080
